--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
 			<groupId>org.wso2.carbon.analytics-common</groupId>
 			<artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
 			<version>5.0.12-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>slf4j.wso2</groupId>
+					<artifactId>slf4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.analytics-common</groupId>
